--- a/blog_frontend_mongoose/package.json
+++ b/blog_frontend_mongoose/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "esbuild": "0.17.10",
+    "luxon": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0"
